<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddClassActivity">

    <Spinner
        android:id="@+id/YearDropDown"
        android:layout_width="141dp"
        android:layout_height="36dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/QuarterDropDown"
        android:layout_width="141dp"
        android:layout_height="36dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Add Classes"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="4dp"
        android:text="Year"
        app:layout_constraintBottom_toTopOf="@+id/YearDropDown"
        app:layout_constraintStart_toStartOf="@+id/YearDropDown" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="4dp"
        android:text="Quarter"
        app:layout_constraintBottom_toTopOf="@+id/QuarterDropDown"
        app:layout_constraintStart_toStartOf="@+id/QuarterDropDown" />

    <EditText
        android:id="@+id/editSubject"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Subject"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/QuarterDropDown"
        app:layout_constraintTop_toBottomOf="@+id/QuarterDropDown" />

    <EditText
        android:id="@+id/editCourse"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Number"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/YearDropDown"
        app:layout_constraintTop_toBottomOf="@+id/QuarterDropDown" />

    <Button
        android:id="@+id/AddClassButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:onClick="addClassOnClicked"
        android:text="Add Class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ClassSizeDropDown" />

    <Button
        android:id="@+id/DoneButton"
        android:layout_width="155dp"
        android:layout_height="62dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="16dp"
        android:onClick="doneonClick"
        android:text="Go to Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ClassList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classScrollView" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/classScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/DoneButton"
        app:layout_constraintEnd_toEndOf="@+id/editCourse"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editSubject"
        app:layout_constraintTop_toBottomOf="@+id/AddClassButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/classesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Spinner
        android:id="@+id/ClassSizeDropDown"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/YearDropDown"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/QuarterDropDown"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Class Size"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editSubject" />

    <Button
        android:id="@+id/ClassList"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="16dp"
        android:onClick="classListOnClick"
        android:text="Classes List"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DoneButton"
        app:layout_constraintTop_toBottomOf="@+id/classScrollView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>